# kaleidoscope

./: .editorconfig  .gitignore  README.md  linux-clang.ini  meson.build
include/: KaleidoscopeJIT.hpp  main.hpp
src/: main.cpp
